sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:3: error: not found: value color
  val bleu = color.Blue
             ^DutchFlagAlgo:4: error: not found: value color
  val rouge = color.Red
              ^DutchFlagAlgo:5: error: not found: value color
  val blanc = color.White
              ^