sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  val bleu = color.Blue
  val rouge = color.Red
  val blanc = color.White
  val n = getTaille()
  for (i <- 0 to n-1) {
    for(j <- i to n-1) {
      if(getCouleur(i) != bleu) {
        if(getCouleur(j) == bleu) {
          echange(i,j)
        }
      }
    }
  }
}